force-app/main/default/objects/Partner_Specialization_Request__c/Partner_Specialization_Request__c.object-meta.xml
<CustomObject>
    <label>Partner Specialization Request</label>
    <nameField>
        <displayFormat>SpecRequest-{0000000}</displayFormat>
        <label>Partner Specialization Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Specialization Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>