force-app/main/default/objects/Partner_Specialization_Request__c/fields/Approx_implementations__c.field-meta.xml
<CustomField>
    <fullName>Approx_implementations__c</fullName>
    <label>Approx # implementations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 5</fullName>
            </value>
            <value>
                <fullName>6-20</fullName>
            </value>
            <value>
                <fullName>21-50</fullName>
            </value>
            <value>
                <fullName>51+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>