force-app/main/default/objects/Partner_Specialization_Request__c/fields/CDM__c.field-meta.xml
<CustomField>
    <fullName>CDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Specialization_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>