force-app/main/default/objects/Partner_Specialization_Request__c/fields/Current_PS_offerings__c.field-meta.xml
<CustomField>
    <fullName>Current_PS_offerings__c</fullName>
    <label>Current PS offerings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>