force-app/main/default/objects/Partner_Specialization_Request__c/fields/Job_title__c.field-meta.xml
<CustomField>
    <fullName>Job_title__c</fullName>
    <formula>Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job title</label>
    <type>Text</type>
</CustomField>