force-app/main/default/objects/Partner_Specialization_Request__c/fields/Pactsafe_URL__c.field-meta.xml
<CustomField>
    <fullName>Pactsafe_URL__c</fullName>
    <label>Pactsafe URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>