force-app/main/default/objects/Partner_Specialization_Request__c/fields/Partner_Channel_Program_Level_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Channel_Program_Level_Name__c</fullName>
    <formula>Partner_Company_Name__r.Channel_Program_Level_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Channel Program Level Name</label>
    <type>Text</type>
</CustomField>