force-app/main/default/objects/Partner_Specialization_Request__c/fields/Partner_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Specialization Requests</relationshipLabel>
    <relationshipName>Partner_Specialization_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>