force-app/main/default/objects/Partner_Specialization_Request__c/fields/Post_sales_service_engineer__c.field-meta.xml
<CustomField>
    <fullName>Post_sales_service_engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post sales service engineer</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <filterItems>
            <field>Contact.User_Profile__c</field>
            <operation>equals</operation>
            <value>Rubrik Partner Community User</value>
        </filterItems>
        <filterItems>
            <field>Contact.User_Profile__c</field>
            <operation>equals</operation>
            <value>Rubrik Partner Community Manager)</value>
        </filterItems>
        <filterItems>
            <field>Contact.No_Longer_Employed_Here__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Specialization Requests (Post sales service engineer)</relationshipLabel>
    <relationshipName>Partner_Specialization_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>