force-app/main/default/objects/Partner_Specialization_Request__c/fields/PS_Alignment_Call__c.field-meta.xml
<CustomField>
    <fullName>PS_Alignment_Call__c</fullName>
    <formula>TEXT(Partner_Company_Name__r.PS_Alignment_Call__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS Alignment Call</label>
    <type>Text</type>
</CustomField>