force-app/main/default/objects/Partner_Specialization_Request__c/fields/PS_quote_authorized__c.field-meta.xml
<CustomField>
    <fullName>PS_quote_authorized__c</fullName>
    <formula>Partner_Company_Name__r.PS_Quote_Authorized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS quote authorized</label>
    <type>Checkbox</type>
</CustomField>