force-app/main/default/objects/Partner_Specialization_Request__c/fields/PSE_Shadow_completed__c.field-meta.xml
<CustomField>
    <fullName>PSE_Shadow_completed__c</fullName>
    <formula>Partner_Company_Name__r.PSE_Shadow_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># PSE Shadow completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>