force-app/main/default/objects/Partner_Specialization_Request__c/fields/RCIE_completed__c.field-meta.xml
<CustomField>
    <fullName>RCIE_completed__c</fullName>
    <formula>Partner_Company_Name__r.RCIE_Certified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Deprecated) # RCIE completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>