force-app/main/default/objects/Partner_Specialization_Request__c/fields/RCSA_completed__c.field-meta.xml
<CustomField>
    <fullName>RCSA_completed__c</fullName>
    <formula>Partner_Company_Name__r.RCSA_Accredited__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># RCSA completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>