force-app/main/default/objects/Partner_Specialization_Request__c/fields/RPSE_completed__c.field-meta.xml
<CustomField>
    <fullName>RPSE_completed__c</fullName>
    <formula>Partner_Company_Name__r.RPSE_Accredited__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># RPSE completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>