force-app/main/default/objects/Partner_Specialization_Request__c/fields/RPSP_Date__c.field-meta.xml
<CustomField>
    <fullName>RPSP_Date__c</fullName>
    <label>RPSP Date</label>
    <type>Date</type>
</CustomField>