force-app/main/default/objects/Partner_Specialization_Request__c/fields/Rubrik_demo_lab__c.field-meta.xml
<CustomField>
    <fullName>Rubrik_demo_lab__c</fullName>
    <label>Rubrik demo lab</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>