force-app/main/default/objects/Partner_Specialization_Request__c/fields/Rubrik_PS_experience__c.field-meta.xml
<CustomField>
    <fullName>Rubrik_PS_experience__c</fullName>
    <label>Rubrik PS experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 6 months</fullName>
            </value>
            <value>
                <fullName>6-12 months</fullName>
            </value>
            <value>
                <fullName>12-24 months</fullName>
            </value>
            <value>
                <fullName>24+ months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>