force-app/main/default/objects/Partner_Specialization_Request__c/fields/Sp_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Sp_Contact_Email__c</fullName>
    <formula>Specialization_contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>