force-app/main/default/objects/Partner_Specialization_Request__c/fields/Sp_Contact_Job_title__c.field-meta.xml
<CustomField>
    <fullName>Sp_Contact_Job_title__c</fullName>
    <formula>Specialization_contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job title.</label>
    <type>Text</type>
</CustomField>