force-app/main/default/objects/Partner_Specialization_Request__c/fields/Specialization_contact__c.field-meta.xml
<CustomField>
    <fullName>Specialization_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Can&apos;t find the correct team contact? Reach out to Goforward@rubrik.com</inlineHelpText>
    <label>Primary Specialization Contact</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <filterItems>
            <field>Contact.User_Profile__c</field>
            <operation>equals</operation>
            <value>Rubrik Partner Community User</value>
        </filterItems>
        <filterItems>
            <field>Contact.User_Profile__c</field>
            <operation>equals</operation>
            <value>Rubrik Partner Community Manager</value>
        </filterItems>
        <filterItems>
            <field>Contact.No_Longer_Employed_Here__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Specialization Requests (Specialization contact)</relationshipLabel>
    <relationshipName>Partner_Specialization_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>