force-app/main/default/objects/Partner_Specialization_Request__c/fields/Specialization_Type__c.field-meta.xml
<CustomField>
    <fullName>Specialization_Type__c</fullName>
    <label>Specialization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RPSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>