force-app/main/default/objects/Partner_Specialization_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner_Company_Name__c</columns>
    <columns>CDM__c</columns>
    <columns>Specialization_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>