force-app/main/default/objects/Partner_Specialization_Request__c/listViews/Partner_Specilization_Req_Approvar_Partner_Specialization_Request.listView-meta.xml
<ListView>
    <fullName>Partner_Specilization_Req_Approvar_Partner_Specialization_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Partner Specialization Req Approver</label>
    <queue>Partner_Specialization_Req_Approver</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>